--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,11 @@ retrying==1.3.3 \
 
 nltk==3.4.4 \
   --hash=sha256:764c20a5f8532a681c261af3c7d1a54768a35df6f3603df75e615cbd34e47cb5
+
+# Used by pandas to_excel()
+openpyxl==3.0.1 \
+  --hash=sha256:a3ee361d3ff04af6048d594775b3a54ffdf215d40fa5c6c78b2a41c0d0b020d3
+jdcal==1.4.1 \
+  --hash=sha256:1abf1305fce18b4e8aa248cf8fe0c56ce2032392bc64bbd61b5dff2a19ec8bba
+et_xmlfile==1.0.1 \
+  --hash=sha256:614d9722d572f6246302c4491846d2c393c199cfa4edc9af593437691683335b
